Loading page reels section overlap fixed

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,7 +7,7 @@
 }
 
 .heroBannerImageWrap {
-  
+  position: relative;
   width: 100%;
   aspect-ratio: 1024 / 500;
 }
